<resources>
    <string name="title_mods">Mods</string>
    <string name="title_info">Info</string>
    <string name="info_step_one">1.CHOOSE YOUR FAVOURITE CARD OR MOD</string>
    <string name="info_step_one_header">Jump League</string>
    <string name="info_step_one_text">This is a simple parkour map that overcomes obstacles using command blocks and must defeat the final boss</string>
    <string name="info_step_three">3.CLICK THE INSTALL BUTTON, MINECRAFT WILL OPEN AND IMPORT INTO THE GAME WILL BEGIN. WAIT FOR THE IMPORT TO END</string>
    <string name="info_step_four_one">4.THE DOWNLOADED MAP WILL APPEAR IN THE WORLDS SECTION.</string>
    <string name="info_step_four_two">IF YOU INSTALLED MODS, THEY WILL APPEAR IN THE CORRESPONDING SECTION IN THE MAP SETTINGS.</string>
    <string name="back">Back</string>
    <string name="downloading">DOWNLOADING</string>
    <string name="install">INSTALL</string>
    <string name="mods">Mods</string>
    <string name="maps">Maps</string>
    <string name="skins">Skins</string>
    <string name="Continue">Continue</string>
    <string name="famous_mods">FAMOUS MODS</string>
    <string name="choose_mods">CHOOSE MODS FOR YOUR GAME</string>
    <string name="choose_skins">CHOOSE SKINS FOR YOUR CHARACTER</string>
    <string name="start_playing1">START PLAYING WITH UNIQUE MODS,MAPS AND SKINS RIGHT NOW!</string>
    <string name="start_playing2">START PLAYING WITH UNIQUE MODS,MAPS AND SKINS RIGHT NOW!</string>
    <string name="start_playing3">START PLAYING WITH UNIQUE MODS,MAPS AND SKINS RIGHT NOW!</string>
    <string name="dragon_mods">Dragon mods</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="subscription_description">" After the offer expires, the subscription will automatically become paid and you will be charged $30 once a week until you cancel. You can unsubscribe at any time. See our privacy policy and terms of use. "</string>
    <string name="all">All</string>
    <string name="app_name">Mastercraft</string>
    <string name="choose_maps">CHOOSE MAPS YOU WANT TO PLAY</string>
    <string name="download">DOWNLOAD</string>
    <string name="info_step_two">2.CLICK THE DOWNLOAD BUTTON AND WAIT FOR THE CARD OR MOD TO LOAD ONTO THE DEVICE.a</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_maps">Maps</string>
    <string name="info_step_four_three">ENJOY THE GAME :)</string>
    <string name="unlimited_downloads">UNLIMITED DOWNLOADS</string>
    <string name="couldnt_connect">Couldn\'t connect to Google Services</string>
    <string name="try_again">Try again</string>
    <string name="error_occurred">An error occurred</string>
    <string name="user_cancelled">You must buy a subscription to use this application</string>
    <string name="connecting_to_services">Connecting to google services.Please, wait a while</string>
    <string name="info_title_text">Instructions for using the application</string>
    <string name="title_skins">Skins</string>
    <string name="maps_and_skins">MAPS AND SKINS</string>
</resources>