<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_mods"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_mods" />
    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_map"
        android:title="@string/title_maps" />
    <item
        android:id="@+id/navigation_skins"
        android:icon="@drawable/ic_skins"
        android:title="@string/title_skins" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favorite_not_liked"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />

</menu>