<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mods">

    <fragment
        android:id="@+id/navigation_mods"
        android:name="com.delitx.minecraftmods.ui.mods.ModsFragment"
        android:label="@string/title_mods"
        tools:layout="@layout/items_fragment" >
        <action
            android:id="@+id/actionModDetail"
            app:destination="@id/modsDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.delitx.minecraftmods.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/actionModDetail"
            app:destination="@id/modsDetailFragment" />
        <action
            android:id="@+id/actionMapDetail"
            app:destination="@id/mapsDetailFragment" />
        <action
            android:id="@+id/actionSkinDetail"
            app:destination="@id/skinsDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.delitx.minecraftmods.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.delitx.minecraftmods.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/items_fragment" >
        <action
            android:id="@+id/actionMapDetail"
            app:destination="@id/mapsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_skins"
        android:name="com.delitx.minecraftmods.ui.skins.SkinsFragment"
        android:label="@string/title_skins"
        tools:layout="@layout/items_fragment" >
        <action
            android:id="@+id/actionSkinDetail"
            app:destination="@id/skinsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsDetailFragment"
        android:name="com.delitx.minecraftmods.ui.maps.MapsDetailFragment"
        android:label="MapsDetailFragment"
        tools:layout="@layout/mod_layout">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/modsDetailFragment"
        android:name="com.delitx.minecraftmods.ui.mods.ModsDetailFragment"
        android:label="ModsDetailFragment"
        tools:layout="@layout/mod_layout">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/skinsDetailFragment"
        android:name="com.delitx.minecraftmods.ui.skins.SkinsDetailFragment"
        android:label="SkinsDetailFragment" >
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/skinsScrollFragment"
        android:name="com.delitx.minecraftmods.ui.skins.SkinsScrollFragment"
        android:label="SkinsScrollFragment" >
        <action
            android:id="@+id/actionSkinDetail"
            app:destination="@id/skinsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsScrollFragment"
        android:name="com.delitx.minecraftmods.ui.maps.MapsScrollFragment"
        android:label="MapsScrollFragment" >
        <action
            android:id="@+id/actionMapDetail"
            app:destination="@id/mapsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/modsScrollFragment"
        android:name="com.delitx.minecraftmods.ui.mods.ModsScrollFragment"
        android:label="ModsScrollFragment" >
        <action
            android:id="@+id/actionModDetail"
            app:destination="@id/modsDetailFragment" />
    </fragment>
</navigation>